fix transition in form

--- a/index.html
+++ b/index.html
@@ -578,6 +578,10 @@
             I accept the terms and conditions of the
             <a href="#" class="checkbox__link">Privacy Policy</a>
           </label>
+          <button class="send__button" type="submit">
+            Send
+          </button>
+        </form>
         </form>
       </div>
     </div>
