--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             </li>
           </ul>
         </div>
-        <!-- <div class="container__subscribe"> -->
+        <div class="container__subscribe">
         <form class="subscribe__form">
           <label class="subscribe__label" for="subscribe-email">
             Subscribe
@@ -504,84 +504,100 @@
             </svg>
           </button>
         </form>
-        <!-- </div> -->
+        </div>
       </div>
     </footer>
 
     <div class="modal-overlay is-open">
       <div class="modal">
-        <button class="modal__button-close">
-          <svg class="modal__icon-close" class="" width="8" height="8">
+        <button class="modal__button-close" type="button">
+          <svg class="modal__icon-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="modal__text">Leave your contacts and we will call you back</p>
         <form class="modal__form">
-          <label class="modal__contact-label" for="name">
-            Name
-            <svg class="modal__icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-name"></use>
-            </svg>
-            <input
-              class="modal__contact-input"
-              type="text"
-              name="name"
-              id="name"
-            />
-          </label>
-          <label class="modal__contact-label" for="phone">
-            Phone
-            <svg class="modal__icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
-            <input
-              class="modal__contact-input"
-              type="tel"
-              name="phone"
-              id="phone"
-            />
-          </label>
-          <label class="modal__contact-label" for="email">
-            Email
-            <svg class="modal__icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-email"></use>
-            </svg>
-            <input
-              class="modal__contact-input"
-              type="email"
-              name="email"
-              id="email"
-            />
-          </label>
-          <label class="modal__contact-label" for="comment">
-            Comment
+          <div class="modal__form__container">
+            <label class="modal__contact-label" for="user-name">
+              Name
+              <div class="input__container">
+                <input
+                  class="modal__contact-input"
+                  type="text"
+                  name="user-name"
+                  id="user-name"
+                />
+                <svg class="modal__icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-name"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="modal__form__container">
+            <label class="modal__contact-label" for="phone">
+              Phone
+              <div class="input__container">
+                <input
+                  class="modal__contact-input"
+                  type="tel"
+                  name="phone"
+                  id="phone"
+                />
+                <svg class="modal__icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="modal__form__container">
+            <label class="modal__contact-label" for="email">
+              Email
+              <div class="input__container">
+                <input
+                  class="modal__contact-input"
+                  type="email"
+                  name="email"
+                  id="email"
+                />
+                <svg class="modal__icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="modal__comment__container">
+            <label class="modal__contact-label" for="user-comment">
+              Comment
+            </label>
             <textarea
-            class="modal__contact-comment"
-              name="comment"
-              id="comment"
-              rows="5"
-              placeholder="Text input"
-            ></textarea>
-          </label>
-          <label class="checkbox" for="checkbox">
+              class="modal__contact-comment"
+                name="user-comment"
+                id="user-comment"
+                rows="5"
+                placeholder="Text input"
+              ></textarea>
+          </div>
+          <div class="modal__checkbox__container">
             <input
-              class="checkbox__input visually-hidden"
-              type="checkbox"
-              name="checkbox"
-              id="checkbox"
-            />
-            <span class="checkbox__custom">
-              <svg class="checkbox__icon" width="10" height="8">
-                <use href="./images/icons.svg#icon-check"></use>
-              </svg>
-            </span>
-            I accept the terms and conditions of the
-            <a href="#" class="checkbox__link">Privacy Policy</a>
-          </label>
+                class="checkbox__input visually-hidden"
+                type="checkbox"
+                value="true"
+                name="user-privacy"
+                id="user-privacy"
+              />
+            <label class="checkbox" for="user-privacy">
+              <span class="checkbox__custom">
+                <svg class="checkbox__icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="#" class="checkbox__link">Privacy Policy</a>
+            </label>
+          </div>
           <button class="send__button" type="submit">
             Send
           </button>
-        </form>
         </form>
       </div>
     </div>
