--- a/index.html
+++ b/index.html
@@ -486,24 +486,24 @@
           </ul>
         </div>
         <div class="container__subscribe">
-        <form class="subscribe__form">
-          <label class="subscribe__label" for="subscribe-email">
-            Subscribe
-            <input
-              class="subscribe__input"
-              type="email"
-              name="subscribe-email"
-              id="subscribe-email"
-              placeholder="E-mail"
-            />
-          </label>
-          <button class="subscribe__button" type="submit">
-            Subscribe
-            <svg class="subscribe__icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-subscribe"></use>
-            </svg>
-          </button>
-        </form>
+          <p class="subscribe__text">Subscribe</p>
+          <form class="subscribe__form">
+            <label class="subscribe__label" for="subscribe-email">
+              <input
+                class="subscribe__input"
+                type="email"
+                name="subscribe-email"
+                id="subscribe-email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscribe__button" type="submit">
+              Subscribe
+              <svg class="subscribe__icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
@@ -518,24 +518,22 @@
         <p class="modal__text">Leave your contacts and we will call you back</p>
         <form class="modal__form">
           <div class="modal__form__container">
-            <label class="modal__contact-label" for="user-name">
-              Name
-              <div class="input__container">
-                <input
-                  class="modal__contact-input"
-                  type="text"
-                  name="user-name"
-                  id="user-name"
-                />
-                <svg class="modal__icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-name"></use>
-                </svg>
-              </div>
-            </label>
+            <label class="modal__contact-label" for="user-name"> Name</label>
+            <div class="input__container">
+              <input
+                class="modal__contact-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="modal__icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-name"></use>
+              </svg>
+            </div>
           </div>
           <div class="modal__form__container">
             <label class="modal__contact-label" for="phone">
-              Phone
+              Phone</label>
               <div class="input__container">
                 <input
                   class="modal__contact-input"
@@ -547,11 +545,11 @@
                   <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
               </div>
-            </label>
+            
           </div>
           <div class="modal__form__container">
             <label class="modal__contact-label" for="email">
-              Email
+              Email</label>
               <div class="input__container">
                 <input
                   class="modal__contact-input"
@@ -563,7 +561,7 @@
                   <use href="./images/icons.svg#icon-email"></use>
                 </svg>
               </div>
-            </label>
+            
           </div>
           <div class="modal__comment__container">
             <label class="modal__contact-label" for="user-comment">
@@ -571,20 +569,20 @@
             </label>
             <textarea
               class="modal__contact-comment"
-                name="user-comment"
-                id="user-comment"
-                rows="5"
-                placeholder="Text input"
-              ></textarea>
+              name="user-comment"
+              id="user-comment"
+              rows="5"
+              placeholder="Text input"
+            ></textarea>
           </div>
           <div class="modal__checkbox__container">
             <input
-                class="checkbox__input visually-hidden"
-                type="checkbox"
-                value="true"
-                name="user-privacy"
-                id="user-privacy"
-              />
+              class="checkbox__input visually-hidden"
+              type="checkbox"
+              value="true"
+              name="user-privacy"
+              id="user-privacy"
+            />
             <label class="checkbox" for="user-privacy">
               <span class="checkbox__custom">
                 <svg class="checkbox__icon" width="10" height="8">
@@ -595,9 +593,7 @@
               <a href="#" class="checkbox__link">Privacy Policy</a>
             </label>
           </div>
-          <button class="send__button" type="submit">
-            Send
-          </button>
+          <button class="send__button" type="submit">Send</button>
         </form>
       </div>
     </div>
